// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`formatMessage does not include performance information for subscriptions 1`] = `
Array [
  "%c apollo %csubscription %cMessagesSubscription",
  "color: gray; font-weight: lighter",
  "color: red;",
  "color: inherit;",
]
`;

exports[`formatMessage returns a list of strings suitable for console logging 1`] = `
Array [
  "%c apollo %cquery %cFormatMessageQuery %c(in 1000 ms)",
  "color: gray; font-weight: lighter",
  "color: #03A9F4;",
  "color: inherit;",
  "color: gray; font-weight: lighter;",
]
`;

exports[`formatMessage returns a list of strings suitable for console logging 2`] = `
Array [
  "%c apollo %cmutation %cFormatMessageMutation %c(in 500 ms)",
  "color: gray; font-weight: lighter",
  "color: red;",
  "color: inherit;",
  "color: gray; font-weight: lighter;",
]
`;
